# blog-search

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.dev.yml  compose.prod.yml  compose.yml  fly.toml  go.mod  go.sum  main.go  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yml  build-new-image.yml
app/handlers/: handlers.go
app/static/: robots.txt
app/views/: search.html
app/views/partials/: navbar.html
db/: schema.sql
deployments/: deployment.yaml  service.yaml
scraper/: deploy_lambda.sh  scraper.py  sqs_queue.py
scraper/archive/: deploy_lambda.sh  old_scraper_2.py
scraper/archive/feeds/: ooh-apple.ompl  ooh-graphics.ompl  ooh-tech.ompl
scraper/feeds/: blogs-hn.opml  hn-blogs-github.ompl.dontindex  ooh-ai.ompl  ooh-development.ompl  ooh-hardware.ompl  ooh-internet.ompl
scraper/lambda/: lambda_scrape.py
static/: site.webmanifest  sitemap.xml
views/: about.html  index.html
views/layouts/: main.html
views/partials/: footer.html
web/: search_engine.py  server.py
web-scraper/: all_posts.json  allowed_domains.txt  cleaned_domains.txt  create_feeds.py  feed_urls.txt  main.py  ooh-tech.ompl  requirements.txt  search_engine.py  server.py  small-feeds.txt
web-scraper/templates/: index.html
web/static/css/: style.css
web/templates/: about.html  api.html  base.html  bot.html  index.html  privacy.html  search.html  search_results.html
