[project]
name = "blog-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
