[project]
name = "blog-search"
version = "0.1.0"
description = "Search engine indexing personal blog content"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37.13",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "fastfeedparser>=0.3.5",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.0",
]
